Prevent auto-zoom on input focus on iOS
See:
<https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone>

--- a/src/styles/_grid-controls.scss
+++ b/src/styles/_grid-controls.scss
@@ -16,8 +16,7 @@
     font-weight: 600;
     color: #fff;
   }
-  label,
-  .grid-control-value {
+  label {
     font-size: 14px;
   }
   input[type='number'] {
@@ -40,4 +39,5 @@
 .grid-control-value {
   margin-left: 4px;
   margin-right: 2px;
+  font-size: 16px;
 }
